& fix sticky element on safari

--- a/src/app/components/item-table/item-table.component.less
+++ b/src/app/components/item-table/item-table.component.less
@@ -1,9 +1,3 @@
-app-navigation {
-	position: sticky;
-	top: 0;
-	z-index: 1;
-}
-
 .skeleton {
 	display: inline-block;
 }
