--- a/src/app/components/nagivation/navigation.component.less
+++ b/src/app/components/nagivation/navigation.component.less
@@ -6,6 +6,10 @@
 
 	background-color: white;
 	padding-block: 0.75rem;
+
+	position: sticky;
+	top: 0;
+	z-index: 1;
 }
 
 .btn {
